Mejora documentación con wanrings de SonarLint